# Advanced-Fractals

./: .gitignore  CMakeLists.txt  Dependencies.cmake  README.md  run.bat
App/: CMakeLists.txt
App/Data/: Fullscreen.vert.glsl  Mandelbrot.frag.glsl  MandelbrotDouble.frag.glsl
App/Source/: ControlLayer.cpp  ControlLayer.hpp  FractalLayer.cpp  FractalLayer.hpp  Fractals2.cpp
Core/: CMakeLists.txt
Core/Source/Core/: Application.cpp  Application.hpp  ColorPalette.cpp  ColorPalette.hpp  CustomEvents.hpp  Event.hpp  Layer.cpp  Layer.hpp  Window.cpp  Window.hpp
Core/Source/Core/Renderer/: Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
